{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 32,
  "lineage": "f13f0d65-0ef4-d119-c2f7-fa9c9a5fe6e5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/backend-nic",
            "ip_configuration": [
              {
                "name": "backendIpConfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/backend"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-7F-1F-56",
            "name": "backend-nic",
            "network_security_group_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/backend-nsg",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "TDP",
            "virtual_machine_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Compute/virtualMachines/backend-vm"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-backend",
            "azurerm_resource_group.TDP-res-group",
            "azurerm_subnet.subnet-backend",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/frontend-nic",
            "ip_configuration": [
              {
                "name": "frontendIpConfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
                "subnet_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/frontend"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-7F-3F-8B",
            "name": "frontend-nic",
            "network_security_group_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/frontend-nsg",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "TDP",
            "virtual_machine_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Compute/virtualMachines/frontend-vm"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-frontend",
            "azurerm_public_ip.publicIP-frontend",
            "azurerm_resource_group.TDP-res-group",
            "azurerm_subnet.subnet-frontend",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-managment",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/managment-nic",
            "ip_configuration": [
              {
                "name": "managmentIpConfig",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/publicIPAddresses/managment-pip",
                "subnet_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/managment"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-7F-19-21",
            "name": "managment-nic",
            "network_security_group_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/managment-nsg",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "TDP",
            "virtual_machine_id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Compute/virtualMachines/managment-vm"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-managment",
            "azurerm_public_ip.publicIP-managment",
            "azurerm_resource_group.TDP-res-group",
            "azurerm_subnet.subnet-managment",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/backend-nsg",
            "location": "uksouth",
            "name": "backend-nsg",
            "resource_group_name": "TDP",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP-from-frontnet",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-from-managment",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.4.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/frontend-nsg",
            "location": "uksouth",
            "name": "frontend-nsg",
            "resource_group_name": "TDP",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-managment",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkSecurityGroups/managment-nsg",
            "location": "uksouth",
            "name": "managment-nsg",
            "resource_group_name": "TDP",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "frontend-261119120951",
            "fqdn": "frontend-261119120951.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.132.23.0",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "frontend-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "TDP",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP-managment",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "managment-261119120951",
            "fqdn": "managment-261119120951.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/publicIPAddresses/managment-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.11.36.30",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "managment-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "TDP",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/backend",
            "ip_configurations": [
              "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/backend-nic/ipConfigurations/backendIpConfig"
            ],
            "name": "backend",
            "resource_group_name": "TDP",
            "virtual_network_name": "shop-network"
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/frontend",
            "ip_configurations": [
              "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/frontend-nic/ipConfigurations/frontendIpConfig"
            ],
            "name": "frontend",
            "resource_group_name": "TDP",
            "virtual_network_name": "shop-network"
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-managment",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/managment",
            "ip_configurations": [
              "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/networkInterfaces/managment-nic/ipConfigurations/managmentIpConfig"
            ],
            "name": "managment",
            "resource_group_name": "TDP",
            "virtual_network_name": "shop-network"
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group",
            "azurerm_virtual_network.shop-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "shop-network",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network",
            "location": "uksouth",
            "name": "shop-network",
            "resource_group_name": "TDP",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/frontend",
                "name": "frontend"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/backend",
                "name": "backend"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/960388b4-f28f-430d-91ee-388bc5cfe221/resourceGroups/TDP/providers/Microsoft.Network/virtualNetworks/shop-network/subnets/managment",
                "name": "managment"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.TDP-res-group"
          ]
        }
      ]
    }
  ]
}